# TradingUsingMeta5

./: .env  .gitignore  Makefile  README.md  TODO.Md  adx.ipynb  analysis.py  anlysis.ipynb  backtest.ipynb  eurusd_rates.csv  indicators.ipynb  main.py  plots.py  pyproject.toml
